eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: legal-referral-api-service
spec:
  selector:
    app: legal-referral-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
