eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: legal-referral-ingress-http
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"  # Allow up to 50MB file uploads
spec:
  ingressClassName: nginx
  rules:
    - host: "api.sixteenbrains.studio"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: legal-referral-api-service
                port:
                  number: 80
  tls:
    - hosts:
        - "api.sixteenbrains.studio"
      secretName: legal-referral-tls
